# qoscc

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindJack.cmake
include/: controllerclass.h  datastoredialog.h  dbuffer.h  deviceclass.h  devicecontrol.h  deviceinterface.h  dspalsa.h  dspcommon.h  dspjack.h  dspmm.h  dspnone.h  fslider.h  globalclass.h  misc.h  qosccwindow.h  qoscwindow.h  scopeclass.h  scopecontrol.h  scopeinterface.h  scopeobserver.h  scopeview.h  stringlist.h  traceclass.h  tracecontrol.h  traceinterface.h
src/: controllerclass.cpp  datastoredialog.cpp  dbuffer.cpp  deviceclass.cpp  devicecontrol.cpp  dspalsa.cpp  dspcommon.cpp  dspjack.cpp  dspmm.cpp  dspnone.cpp  fslider.cpp  globalclass.cpp  main.cpp  misc.cpp  qosccwindow.cpp  qoscwindow.cpp  scopeclass.cpp  scopecontrol.cpp  scopeview.cpp  stringlist.cpp  traceclass.cpp  tracecontrol.cpp
tests/: fslider_test.cpp
ui/: datastoredialog.ui  qosccwindow.ui  qoscwindow.ui
